added router authChange  changed swagger
